# embediq

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_STATUS.md  CMakeLists.txt  CODING_RULES.md  COMMERCIAL_BOUNDARY.md  COMPLIANCE.md  CONTRIBUTING.md  HANDOFF.md  NOTICE  README.md  ROADMAP.md  SESSION_LOG.md  messages_registry.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
PM/: AGENT_CODING_SESSION_PROMPT.md  gate_protocol.md  project_state.md  release_log.md
components/: README.md
components/embediq_crc/: CMakeLists.txt  LICENSE  embediq_crc.c  embediq_crc.h  test_embediq_crc.c
core/include/: embediq_bridge.h  embediq_bus.h  embediq_cfg.h  embediq_config.h  embediq_endpoint.h  embediq_fb.h  embediq_lib.h  embediq_meta.h  embediq_mqtt.h  embediq_msg.h  embediq_nvm.h  embediq_obs.h  embediq_osal.h  embediq_ota.h  embediq_platform.h  embediq_platform_msgs.h  embediq_sm.h  embediq_subfn.h  embediq_telemetry.h  embediq_test.h  embediq_time.h  embediq_timer.h  embediq_wdg.h
core/include/hal/: hal_defs.h  hal_flash.h  hal_gpio.h  hal_i2c.h  hal_obs_stream.h  hal_spi.h  hal_timer.h  hal_uart.h  hal_wdg.h
core/include/ops/: embediq_mqtt.h  embediq_ota.h  embediq_tls.h
core/src/: CMakeLists.txt  embediq_platform.c  fb_engine.c
core/src/bus/: message_bus.c
core/src/cfg/: embediq_cfg.c
core/src/dispatcher/: README.md
core/src/fsm/: fsm_engine.c
core/src/observatory/: obs.c
core/src/registry/: fb_engine.c
docs/: CONFIG.md  FIRST_FB.md  MIGRATION.md  TELEMETRY.md  VENDORING.md
docs/architecture/: AI_FIRST_ARCHITECTURE.md  cli.md  lifecycle.md
docs/observability/: iqtrace_format.md
examples/gateway/: CMakeLists.txt  README.md  fb_field_receiver.c  fb_north_bridge.c  fb_policy_engine.c  gateway_msgs.h  main.c
examples/service_fb_template/: README.md  fb_logger.c  fb_logger.h  fb_logger_ops.h
examples/thermostat/: CMakeLists.txt  README.md  fb_temp_controller.c  fb_temp_sensor.c  main.c  thermostat_msgs.h
fbs/drivers/: CMakeLists.txt  fb_nvm.c  fb_timer.c  fb_watchdog.c
fbs/services/: CMakeLists.txt  fb_telemetry.c  fb_telemetry.h
hal/freertos/ops/: hal_tls_freertos.c
hal/posix/: CMakeLists.txt  hal_flash_posix.c  hal_obs_stream_posix.c  hal_wdg_posix.c
hal/posix/ops/: hal_tls_posix.c  hal_tls_posix.h
hal/posix/peripherals/: hal_flash_posix.c  hal_obs_stream_posix.c  hal_timer_posix.c  hal_wdg_posix.c
messages/: core.iq  gateway.iq  telemetry.iq  thermostat.iq
osal/posix/: CMakeLists.txt  embediq_osal_posix.c
platform/posix/: CMakeLists.txt  embediq_platform_msgs.h  fb_nvm.c  fb_timer.c  fb_watchdog.c
scripts/: check.sh
tests/: test_platform_lib.c
tests/cli/: test_obs_cli.py
tests/compat/: fb_v1_compat.c
tests/contrib_sim/: last_run.md  run.sh
tests/integration/: CMakeLists.txt  test_gateway_full.c  test_thermostat_capture.c  test_thermostat_full.c  test_thermostat_observable.c
tests/lib/: CMakeLists.txt  test_embediq_crc.c  test_lib_tls_stub.c
tests/unit/: CMakeLists.txt  embediq_test_support.c  test_blocking_dispatch.c  test_dispatch_shutdown.c  test_embediq_cfg.c  test_fb_engine.c  test_fb_nvm.c  test_fb_telemetry.c  test_fb_timer.c  test_fb_watchdog.c  test_fsm_engine.c  test_hal_contracts.c  test_hal_obs.c  test_harness.c  test_message_bus.c  test_obs_capture.c  test_observatory.c  test_osal_obs.c  test_osal_posix.c
tools/: boundary_checker.py  test_boundary_checker.py  validator.py
tools/ci/: binary_blob_check.py  check_fb_calls.py  check_hal_obs.py  check_lib_obs.py  check_osal_obs.py  component_globals_check.py  component_state_check.py  licence_check.py  ops_version_check.py  vendoring_check.py  vendoring_date_check.py
tools/embediq_obs/: embediq_obs.py
tools/messages_iq/: generate.py
